Create PluginSignature class to enable and disable featues depending on if a specific plugin is present